production.rbを変更する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
       <div id="menu-cv" class="menu-cover"></div>
       <div id="mask" class="hidden"></div>
       <div id="search-form" class="hidden">
-        <%= render 'users/search_form' %>
+        <%= render 'layouts/search_form' %>
       </div>
     <% if flash[:notice] %>
       <div class="flash">
