--- a/app/views/posts/_step_fields.html.erb
+++ b/app/views/posts/_step_fields.html.erb
@@ -1,7 +1,19 @@
+<p class="new-steps-letter">作り方</p>
 <div class="nested-fields step-field">
+  <p class="number-font">1</p>
   <div class="new-steps">
-    <%#= f.text_field :step_1 %>
-    <textarea name="step_1"><%= @step.step_1 %></textarea>
-    <%#= link_to_remove_association "削除", class: "delete-form delete-step" %>
+    <%= f.text_area :step_1 %>
+  </div>
+</div>
+<div class="nested-fields step-field">
+  <p class="steps-number number-font">2</p>
+  <div class="new-steps">
+    <%= f.text_area :step_2 %>
+  </div>
+</div>
+<div class="nested-fields step-field">
+  <p class="steps-number number-font">3</p>
+  <div class="new-steps">
+    <%= f.text_area :step_3 %>
   </div>
 </div>
