--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,12 @@
 <div class="posts-show-main">
   <div class="posts-show-item">
     <div class="posts-show-cooking-image">
-      <%= image_tag "/cooking_images/#{@recipe.cooking_image}" %>
+    <% if @recipe.cooking_image? %>
+      <%= image_tag @recipe.cooking_image %>
+    <% else %>
+      <%= image_tag "/cooking_images/cooking_default.png" %>
+    <% end %>
+      <%#= image_tag "/cooking_images/#{@recipe.cooking_image}" %>
       <% if @recipe.user_id == @current_user.id %>
         <div class="post-menu">
           <%= link_to "編集", edit_post_path(@recipe.id), class:"post_edit_button" %>
