--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -2,7 +2,12 @@
   <div class="poster-contents">
     <div class="posts-top">
       <div class="cooking-image">
-        <%= image_tag "/cooking_images/#{recipe.cooking_image}" %>
+        <% if recipe.cooking_image? %>
+          <%= image_tag recipe.cooking_image.url %>
+        <% else %>
+          <%= image_tag "/cooking_images/cooking_default.png" %>
+        <% end %>
+        <!-- <%#= image_tag "/cooking_images/#{recipe.cooking_image}" %> -->
       </div>
     </div>
     <div class="cooking-name">
