--- a/app/views/posts/_step_fields.html.erb
+++ b/app/views/posts/_step_fields.html.erb
@@ -1,6 +1,6 @@
 <p class="new-steps-letter">作り方</p>
 <div class="nested-fields step-field">
-  <p class="number-font">1</p>
+  <p class="number-font">1 <span class="required-item">※必須</span></p>
   <div class="new-steps">
     <%= f.text_area :step_1 %>
   </div>
