--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -23,7 +23,7 @@
           <% recipe = Recipe.find_by(id: like.recipe_id) %>
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="likes-center">
-              <img src="<%= "/cooking_images/#{recipe.cooking_image}" %>">
+              <%= image_tag recipe.cooking_image.url %>
             </div>
             <div class="likes-bottom">
               <%= link_to recipe.cooking_name, post_path(recipe.id) %>
