ingredientフォームにフォーム追加ボタンを作成する

--- a/app/views/posts/_amounts.html.erb
+++ b/app/views/posts/_amounts.html.erb
@@ -1,26 +1,2 @@
 <div class="ingredient-letter">分量</div>
-<p><%= @ingredient.amount_1 %> <%= @ingredient.unit_1 %></p>
-<% if @ingredient.amount_2.present? %>
-  <p><%= @ingredient.amount_2 %> <%= @ingredient.unit_2 %></p>
-<% end %>
-<% if @ingredient.amount_3.present? %>
-  <p><%= @ingredient.amount_3 %> <%= @ingredient.unit_3 %></p>
-<% end %>
-<% if @ingredient.amount_4.present? %>
-  <p><%= @ingredient.amount_4 %> <%= @ingredient.unit_4 %></p>
-<% end %>
-<% if @ingredient.amount_5.present? %>
-  <p><%= @ingredient.amount_5 %> <%= @ingredient.unit_5 %></p>
-<% end %>
-<% if @ingredient.amount_6.present? %>
-  <p><%= @ingredient.amount_6 %> <%= @ingredient.unit_6 %></p>
-<% end %>
-<% if @ingredient.amount_7.present? %>
-  <p><%= @ingredient.amount_7 %> <%= @ingredient.unit_7 %></p>
-<% end %>
-<% if @ingredient.amount_8.present? %>
-  <p><%= @ingredient.amount_8 %> <%= @ingredient.unit_8 %></p>
-<% end %>
-<% if @ingredient.amount_9.present? %>
-  <p><%= @ingredient.amount_9 %> <%= @ingredient.unit_9 %></p>
-<% end %>
+<p><%= @ingredient.amount %> <%= @ingredient.unit %></p>
