--- a/app/views/posts/_ingredient_fields.html.erb
+++ b/app/views/posts/_ingredient_fields.html.erb
@@ -3,69 +3,9 @@
   <div class="new-ingredients">
     <div class="ingredient">
       <p>1 <span class="required-item">※必須</span></p>
-      <%= f.text_field :ingredient_1, placeholder: "材料" %>
-      <%= f.text_field :amount_1, placeholder: "分量" %>
-      <%= f.select :unit_1, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-    <div class="ingredient">
-      <p>2</p>
-      <%= f.text_field :ingredient_2, placeholder: "材料" %>
-      <%= f.text_field :amount_2, placeholder: "分量" %>
-      <%= f.select :unit_2, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-    <div class="ingredient">
-      <p>3</p>
-      <%= f.text_field :ingredient_3, placeholder: "材料" %>
-      <%= f.text_field :amount_3, placeholder: "分量" %>
-      <%= f.select :unit_3, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-  </div>
-  <div class="new-ingredients">
-    <div class="ingredient">
-      <p>4</p>
-      <%= f.text_field :ingredient_4, placeholder: "材料" %>
-      <%= f.text_field :amount_4, placeholder: "分量" %>
-      <%= f.select :unit_4, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-    <div class="ingredient">
-      <p>5</p>
-      <%= f.text_field :ingredient_5, placeholder: "材料" %>
-      <%= f.text_field :amount_5, placeholder: "分量" %>
-      <%= f.select :unit_5, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-    <div class="ingredient">
-      <p>6</p>
-      <%= f.text_field :ingredient_6, placeholder: "材料" %>
-      <%= f.text_field :amount_6, placeholder: "分量" %>
-      <%= f.select :unit_6, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-  </div>
-  <div class="new-ingredients">
-    <div class="ingredient">
-      <p>7</p>
-      <%= f.text_field :ingredient_7, placeholder: "材料" %>
-      <%= f.text_field :amount_7, placeholder: "分量" %>
-      <%= f.select :unit_7, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-    <div class="ingredient">
-      <p>8</p>
-      <%= f.text_field :ingredient_8, placeholder: "材料" %>
-      <%= f.text_field :amount_8, placeholder: "分量" %>
-      <%= f.select :unit_8, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-    </div>
-    <div class="ingredient">
-      <p>9</p>
-      <%= f.text_field :ingredient_9, placeholder: "材料" %>
-      <%= f.text_field :amount_9, placeholder: "分量" %>
-      <%= f.select :unit_9, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
+      <%= f.text_field :ingredient, placeholder: "材料" %>
+      <%= f.text_field :amount, placeholder: "分量" %>
+      <%= f.select :unit, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
               ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
     </div>
   </div>
