--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -33,7 +33,7 @@
           <div class="post-edit-ingredients">
             <div class="edit-ingredients posts-new-content">
               <p class="ingredient">材料</p>
-              <%= f.text_field :ingredient_1, value: @ingredient.ingredient_1 %>
+              <%= f.text_field :ingredient, value: @ingredient.ingredient %>
             </div>
           </div>
           <div class="edit-cooking-steps posts-new-content">
