フォーム追加ボタンを作成する

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -23,6 +23,7 @@
               <%= render 'posts/ingredient_fields', f: i %>
             <% end %>
           </div>
+          <!-- フォーム追加ボタンの作成 -->
           <div id="detail-association-insertion-point"></div>
           <div class="add-form">
             <%= link_to_add_association "フォームを追加", f, :ingredients,
