フォーム追加機能を作成する

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -62,10 +62,10 @@
 }
 
 .user_edit_button {
+  height: 20px;
   color: blue;
   text-decoration: none;
-  margin: 0 0 0 auto;
-  padding-top: 147px;
+  margin: 147px 0 0 auto;
 }
 
 .user-info {
