--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -23,19 +23,7 @@
             <p class="required-item">※必須</p>
             <div class="ingredient-area">
               <%= f.fields_for :ingredients do |i| %>
-                <div class="js-file-group" data-index="${index}">
-                  <div class="new-ingredients">
-                    <div class="posts-new-content ingredient">
-                      <%= i.text_field :ingredient, placeholder: "材料", class: "ingredient-form" %>
-                      <%= i.text_field :amount, placeholder: "分量", class: "amount-form" %>
-                      <%= i.select :unit, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-                              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
-                      <span class="delete-form-btn">
-                        削除する
-                      </span>
-                    </div>
-                  </div>
-                </div>
+                <%= render 'posts/ingredient_fields', f: i %>
               <% end %>
             </div>
           </div>
