--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,21 +2,7 @@
   <div class="container">
     <h2 class="edit-recipe-title">レシピを編集</h2>
     <%= form_with url: update_post_path do |f| %>
-      <% @recipe.errors.full_messages.each do |message| %>
-        <div class="edit-form-error">
-          <%= message %>
-        </div>
-      <% end %>
-      <% @ingredient.errors.full_messages.each do |message| %>
-        <div class="edit-form-error">
-          <%= message %>
-        </div>
-      <% end %>
-      <% @step.errors.full_messages.each do |message| %>
-        <div class="edit-form-error">
-          <%= message %>
-        </div>
-      <% end %>
+      <%#= render 'shared/error_messages' %>
       <div class="edit-post">
         <div class="edit-form">
           <div class="post-cooking_name posts-edit-content posts-new-content">
@@ -26,15 +12,48 @@
           <div class="post-cooking-image posts-edit-content posts-new-content">
             <p>写真を変更する</p>
             <label class="image-form">
-              <%= render 'posts/edit_cooking_image' %>
+              <span class="material-icons camera-icon">add_a_photo</span>
+              <p>ファイルを選択</p>
+              <p class="not-selected"><%= @recipe.cooking_image %></p>
               <%= f.file_field :cooking_image, value: @recipe.cooking_image %>
             </label>
           </div>
           <div class="post-edit-ingredients">
             <div class="edit-ingredients posts-new-content">
               <p class="ingredient">材料</p>
-              <%= f.text_field :ingredient, value: @ingredient.ingredient %>
+              <p class="required-item">※必須</p>
+              <% @ingredient.each do |ing| %>
+                <div class="ingredient-area">
+                  <%= f.fields_for :ingredients do |i| %>
+                    <div class="js-file-group" data-index="${index}">
+                      <div class="new-ingredients">
+                        <div class="posts-new-content ingredient">
+                          <%= i.text_field :ingredient, name: "[ingredients][#{ing.id}][ingredient]", value: ing.ingredient, class: "ingredient-form" %>
+                          <%= i.text_field :amount, name: "[ingredients][#{ing.id}][amount]", value: ing.amount, class: "amount-form" %>
+                          <select class="unit-form" name="[ingredients][<%= ing.id %>][unit]" id="_ingredients_unit">
+                            <option value="<% ing.unit %>"><%= ing.unit %></option>
+                            <option value="大さじ">大さじ</option>
+                            <option value="小さじ">小さじ</option>
+                            <option value="ml">ml</option>
+                            <option value="cc">cc</option>
+                            <option value="グラム">グラム</option>
+                            <option value="個">個</option>
+                            <option value="パック">パック</option>
+                            <option value="枚">枚</option></select>
+                            <span class="delete-form-btn">
+                              削除する
+                            </span>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              <% end %>
+              <!-- <%#= f.text_field :ingredient, value: @ingredient.ingredient %> -->
             </div>
+          </div>
+          <div class="add-form-btn">
+            追加する
           </div>
           <div class="edit-cooking-steps posts-new-content">
             <p class="edit-steps-letter">作り方</p>
