サンプルデータの作成

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -95,6 +95,10 @@
   margin: 0 110px 0 auto;
 }
 
+.paginate {
+  margin-left: 54px;
+}
+
 // show===================================================================
 .posts-show-main {
   height: auto;
