--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="add-form-btn">
-            追加する
+            ＋フォームを追加
           </div>
 
           <div class="new-cooking-steps posts-new-content">
