--- a/app/views/posts/_ingredient_fields.html.erb
+++ b/app/views/posts/_ingredient_fields.html.erb
@@ -4,7 +4,8 @@
       <%= f.text_field :ingredient, placeholder: "材料", class: "ingredient-form" %>
       <%= f.text_field :amount, placeholder: "分量", class: "amount-form" %>
       <%= f.select :unit, [["大さじ", "大さじ"], ["小さじ", "小さじ"],
-              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"]], include_blank: "単位を選択" %>
+              ["ml", "ml"], ["cc","cc"], ["グラム", "グラム"], ["個", "個"], ["パック", "パック"], ["枚", "枚"],
+              ["少々", "少々"], ["ひと摘み", "ひと摘み"]], include_blank: "未選択" %>
       <span class="delete-form-btn">
         削除する
       </span>
