--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
 <div class="users-index-item user-items">
-  <%= image_tag "/user_images/#{user.image}", class:"user_index_image" %>
+  <%= image_tag "/assets/#{user.image}", class:"user_index_image" %>
   <%= link_to user.user_name, user_path(user.id), class:"users_index_name" %>
 </div>
