--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
       <div class="user">
         <div class="user-image-name">
           <div class="user-show-image">
-            <%= image_tag "/user_images/#{@user.image}", class:"user_show_image" %>
+            <%= image_tag "/assets/#{@user.image}", class:"user_show_image" %>
           </div>
           <div class="name-follow">
             <h2><%= @user.user_name %></h2>
