--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
       <%= link_to @user.user_name, user_path(@user), class:"post_user_name" %>
     </div>
     <div class="comment">
-      <p class="comment-letter">コメント</p>
+      <div class="comment-letter">コメント</div>
       <p><%= @recipe.comment %></p>
     </div>
     <div class="show-ingredients">
