--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -238,8 +238,8 @@ body {
   margin: 0;
 }
 
-.top-main {
-  height: auto;
+_::-webkit-full-page-media,_:future,:root .top-main {
+  height: 798px;
   background-color: #faf5f0;
 }
 
