--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PfApp</title>
+    <title>CookLook</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -18,7 +18,7 @@
           <span class="material-icons" id="open-menu">menu</span>
         </div>
         <div class="header-logo">
-          <%= link_to "pf_app", root_path, class:"header-menu" %>
+          <%= link_to "CookLook", root_path %>
         </div>
         <div class="header-list">
           <% if session[:user_id] %>
