スタイル変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <span class="material-icons" id="open-menu">menu</span>
         </div>
         <div class="header-logo">
-          <%= link_to "CookLook", root_path %>
+          <%= link_to "CookLook", root_path, class: "header-title" %>
         </div>
         <div class="header-list">
           <% if session[:user_id] %>
