--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -190,11 +190,16 @@ header {
   margin-left: 9px;
 }
 
-.header-logo a {
+.header-title {
   padding-left: 20px;
   color: black;
   text-decoration: none;
   font-family: serif;
+}
+
+.header-title:hover {
+  text-decoration: none;
+  color: black;
 }
 
 .header-list a {
