--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,11 @@
         <% @user.recipes.each do |recipe| %>
           <div class="col-lg-3 col-md-6 mb-4">
             <div class="cooking-image">
-              <%= image_tag recipe.cooking_image.url %>
+              <% if recipe.cooking_image.present? %>
+                <%= image_tag recipe.cooking_image.url %>
+              <% else %>
+                <%= image_tag "cooking_default.png" %>
+              <% end %>
             </div>
             <div class="posts-bottom">
               <p class="cooking-name">
